--- a/QuickPulse.Investigates.Tests/QuickPulse.Investigates.Tests.csproj
+++ b/QuickPulse.Investigates.Tests/QuickPulse.Investigates.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\QuickPulse\QuickPulse\QuickPulse.csproj" />
+    <ProjectReference Include="..\..\QuickPulse.Explains\QuickPulse.Explains\QuickPulse.Explains.csproj" />
   </ItemGroup>
 
 </Project>
