--- a/QuickPulse.Investigates/QuickPulse.Investigates.csproj
+++ b/QuickPulse.Investigates/QuickPulse.Investigates.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\QuickPulse\QuickPulse\QuickPulse.csproj" />
+    <ProjectReference Include="..\..\QuickPulse.Show\QuickPulse.Show\QuickPulse.Show.csproj" />
+  </ItemGroup>
 </Project>
